--- a/index.html
+++ b/index.html
@@ -212,7 +212,9 @@
         }
 
         #fpsLabel {
-            -webkit-text-stroke: 1px white;
+            background-color: #000;
+            color: white;
+            border-radius: 2px;
         }
 
         canvas {
