--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
             <div class="slidecontainer">
                 <input type="range" min="1" max="100" value="50" class="slider" id="serverCapacityRange">
             </div>
+            <input id="pcapInput" type="file" />
         </div>
     </aside>
 
